samples/_failures_safe/1761196463_6dabd6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1d54c458.c: In function ‘main’:
./samples/SAFE/__tmp_1d54c458.c:170:10: error: expected declaration or statement at end of input
  170 |     enum compression_type comp_type;
      |          ^~~~~~~~~~~~~~~~
